Add a minimal library for logging

--- a/Inspir3.dll/Inspir3.vcxproj.filters
+++ b/Inspir3.dll/Inspir3.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="tcp.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="log.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tcp.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="log.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
